# SpreadSheetHelper

./: .gitignore  LICENSE  README.md
src/GoogleAppsScript/: SheetHelper.gs
src/openpy-helper/: README.md  pyproject.toml
src/openpy-helper/openpyxl_helper/: read_helper.py
src/openpy-helper/openpyxl_helper_test/: test_read_helper.py
test/file/: ReadTest.xlsx
