[tool.poetry]
name = "openpy-helper"
version = "0.1.0"
description = ""
authors = ["candycan <candycan.create@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
openpyxl = "^3.1.2"
pylint = "^3.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
